@@ -98,8 +98,8 @@ convention. The code should be changed to conform to this document.
 
 .. _`Coding style`: coding-style.txt
 
-Add template for various project-types
-......................................
+Add templates for various project-types
+.......................................
 
 We currently have a Project Builder template for a basic PyObjC application. We
 should simular templates for other usefull projects and most importantly a 
